Added new html for second page.

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <title>My Porfolio</title>
 </head>
-<body>
+<body id="body-1">
     <nav>
         <ul>
             <li><a href="http://127.0.0.1:5500/index.html#">Home</a></li>
             <li><a href="#about-me">About</a></li>
             <li><a href="https://github.com/mario-ebueng">GitHub</a></li>
-            <li><a href="#form">Contact Me</a></li>
+            <li><a href="http://127.0.0.1:5500/contact.html">Contact Me</a></li>
         </ul>
     </nav>
     <div class="header">
@@ -46,16 +46,8 @@
                 Aiya loves going for long walks, playing with other dogs and humans, and most of all treats. She's stubborn, chews up everything she deems as a toy, and she does not know how to keep still.
                 But I wouldn't trade her for anything in the world!</p>
         </article>
+        <br>
+        <h1>For more information or to reach out to me, please click the "Contact Me" link at the top of the page.</h1>
     </div>
-    <hr class="hr1">
-    <form id="form" action="mailto:ebuengmariol@gmail.com" method="POST">
-        <label for="body"><strong>Message</strong></label>
-        <br>
-        <textarea id="body" placeholder="Your Message" rows="10" cols="50"></textarea>
-        <br>
-        <button class="form-button"
-        type="submit">Submit</button>
-    </form>
-
 </body>
 </html>
